Ensure search button moves onto a new line on mobile devices.

--- a/app/assets/stylesheets/_header.css
+++ b/app/assets/stylesheets/_header.css
@@ -61,6 +61,13 @@
   width: 100%;
 }
 
+.top-menu input[type=submit] {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0.5em;
+}
+
 .suggestions ul {
   position: absolute;
   display: none;
@@ -108,6 +115,11 @@
   
   .top-menu input[type=text] {
     width: 20em;
+  }
+
+  .top-menu input[type=submit] {
+    display: inline;
+    margin-top: 0;
   }
 }
 
